[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://idle_cantor-.png" type="Texture" id=2]
[ext_resource path="res://tile.tres" type="TileSet" id=3]
[ext_resource path="res://entities/dark_matter/2D Cute Platform tileset.png" type="Texture" id=4]
[ext_resource path="res://scripts/collect.gd" type="Script" id=5]
[ext_resource path="res://scripts/ProgressBar.gd" type="Script" id=6]
[ext_resource path="res://tilemap2.tres" type="TileSet" id=7]
[ext_resource path="res://scenes/GUI.gd" type="Script" id=8]

[sub_resource type="AnimatedTexture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 12.0

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 5, 5, 7, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.230564, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 14.5 )

[node name="World" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1048624, 0, 0, 1179758, 0, 0, 1179760, 0, 0, 1245294, 0, 0, 1245296, 0, 0, 1245298, 0, 0, 1245300, 0, 0, 1245301, 0, 0, 1245302, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1310759, 0, 0, 1310760, 0, 0, 1310761, 0, 0, 1310762, 0, 0, 1310763, 0, 0, 1310829, 0, 0, 1310830, 0, 0, 1310832, 0, 0, 1310834, 0, 0, 1310835, 0, 0, 1310836, 0, 0, 1310837, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376334, 0, 0, 1376365, 0, 0, 1376366, 0, 0, 1376368, 0, 0, 1376370, 0, 0, 1376371, 0, 0, 1376372, 0, 0, 1376373, 0, 0, 1376374, 0, 0, 1376376, 0, 0, 1376378, 0, 0, 1376379, 0, 0, 1441827, 0, 0, 1441828, 0, 0, 1441869, 0, 0, 1441870, 0, 0, 1441900, 0, 0, 1441901, 0, 0, 1441902, 0, 0, 1441904, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507404, 0, 0, 1507405, 0, 0, 1507434, 0, 0, 1507436, 0, 0, 1507437, 0, 0, 1507438, 0, 0, 1507439, 0, 0, 1507440, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1572897, 0, 0, 1572898, 0, 0, 1572913, 0, 0, 1572914, 0, 0, 1572915, 0, 0, 1572916, 0, 0, 1572917, 0, 0, 1572918, 0, 0, 1572919, 0, 0, 1572920, 0, 0, 1572921, 0, 0, 1572922, 0, 0, 1572923, 0, 0, 1572924, 0, 0, 1572925, 0, 0, 1572940, 0, 0, 1572946, 0, 0, 1572968, 0, 0, 1572970, 0, 0, 1572972, 0, 0, 1572973, 0, 0, 1572974, 0, 0, 1572975, 0, 0, 1572976, 0, 0, 1638410, 0, 0, 1638411, 0, 0, 1638412, 0, 0, 1638414, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638417, 0, 0, 1638418, 0, 0, 1638419, 0, 0, 1638420, 0, 0, 1638427, 0, 0, 1638428, 0, 0, 1638473, 0, 0, 1638474, 0, 0, 1638475, 0, 0, 1638503, 0, 0, 1638504, 0, 0, 1638506, 0, 0, 1638508, 0, 0, 1638509, 0, 0, 1638510, 0, 0, 1638511, 0, 0, 1638512, 0, 0, 1703953, 0, 0, 1703954, 0, 0, 1703956, 0, 0, 1703957, 0, 0, 1703958, 0, 0, 1703959, 0, 0, 1703960, 0, 0, 1703961, 0, 0, 1703963, 0, 0, 1704009, 0, 0, 1704036, 0, 0, 1704038, 0, 0, 1704039, 0, 0, 1704040, 0, 0, 1704042, 0, 0, 1704044, 0, 0, 1704045, 0, 0, 1704046, 0, 0, 1704047, 0, 0, 1704048, 0, 0, 1769544, 0, 0, 1769560, 0, 0, 1769568, 0, 0, 1769569, 0, 0, 1769570, 0, 0, 1769571, 0, 0, 1769572, 0, 0, 1769573, 0, 0, 1769574, 0, 0, 1769575, 0, 0, 1769576, 0, 0, 1769577, 0, 0, 1769578, 0, 0, 1769579, 0, 0, 1769580, 0, 0, 1769581, 0, 0, 1769582, 0, 0, 1769583, 0, 0, 1769584, 0, 0, 1769586, 0, 0, 1769587, 0, 0, 1769588, 0, 0, 1769589, 0, 0, 1769590, 0, 0, 1769591, 0, 0, 1769592, 0, 0, 1769593, 0, 0, 1769594, 0, 0, 1769595, 0, 0, 1769596, 0, 0, 1835080, 0, 0, 1835101, 0, 0, 1835102, 0, 0, 1835103, 0, 0, 1835104, 0, 0, 1900585, 0, 0, 1900586, 0, 0, 1900615, 0, 0, 1900616, 0, 0, 1966122, 0, 0, 1966123, 0, 0, 1966124, 0, 0, 1966125, 0, 0, 1966149, 0, 0, 1966150, 0, 0, 1966151, 0, 0, 2031661, 0, 0, 2031662, 0, 0, 2031663, 0, 0, 2031664, 0, 0, 2031665, 0, 0, 2031666, 0, 0, 2031667, 0, 0, 2031668, 0, 0, 2031669, 0, 0, 2031670, 0, 0, 2031671, 0, 0, 2031672, 0, 0, 2031673, 0, 0, 2031674, 0, 0, 2031675, 0, 0, 2031676, 0, 0, 2031677, 0, 0, 2031678, 0, 0, 2031679, 0, 0, 2031680, 0, 0, 2031681, 0, 0, 2031683, 0, 0, 2031684, 0, 0, 2031685, 0, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 133, 368 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( -3, -9 )
scale = Vector2( 0.285398, 0.25 )
texture = ExtResource( 2 )
normal_map = SubResource( 2 )
hframes = 3
frame = 1
region_rect = Rect2( 128, 86, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -3, -6 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 1, 1 )
current = true
zoom = Vector2( 0.4, 0.4 )
smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../Sprite")
anims/RESET = SubResource( 6 )
anims/Run = SubResource( 4 )
anims/idle = SubResource( 3 )

[node name="SeedCooldown" type="Timer" parent="Player"]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="Player"]
enabled = true
cast_to = Vector2( 25, 0 )

[node name="dark_matter" type="Area2D" parent="."]
position = Vector2( 488, 368 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dark_matter"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="dark_matter"]
texture = ExtResource( 4 )

[node name="dark_matter3" type="Area2D" parent="."]
position = Vector2( 903, 470 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dark_matter3"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="dark_matter3"]
texture = ExtResource( 4 )

[node name="dark_matter2" type="Area2D" parent="."]
position = Vector2( 900, 368 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dark_matter2"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="dark_matter2"]
texture = ExtResource( 4 )

[node name="Image2022-11-10134402" type="Sprite" parent="."]
position = Vector2( 160, 288 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
format = 1

[node name="GUI" type="CanvasLayer" parent="."]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )
script = ExtResource( 8 )

[node name="ProgressBar" type="ProgressBar" parent="GUI"]
margin_left = 4.0
margin_top = 6.0
margin_right = 82.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 5 )
rounded = true
script = ExtResource( 6 )

[connection signal="body_shape_entered" from="dark_matter" to="Player" method="_on_dark_matter_body_shape_entered"]
[connection signal="body_shape_entered" from="dark_matter" to="dark_matter" method="_on_dark_matter_body_shape_entered"]
[connection signal="body_shape_entered" from="dark_matter" to="GUI/ProgressBar" method="_on_dark_matter_body_shape_entered"]
[connection signal="body_shape_entered" from="dark_matter3" to="Player" method="_on_dark_matter_body_shape_entered"]
[connection signal="body_shape_entered" from="dark_matter3" to="dark_matter3" method="_on_dark_matter_body_shape_entered"]
[connection signal="body_shape_entered" from="dark_matter2" to="Player" method="_on_dark_matter_body_shape_entered"]
[connection signal="body_shape_entered" from="dark_matter2" to="dark_matter2" method="_on_dark_matter_body_shape_entered"]
